--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         <div class="buttons">
             <!-- Row 1 -->
-            <button class="btn function" data-action="clear">C</button>
+            <button class="btn function clear" data-action="clear">C</button>
             <button class="btn function" data-action="toggle-sign">+/-</button>
             <button class="btn function" data-action="percentage">%</button>
             <button class="btn operator" data-action="divide">÷</button>
@@ -25,7 +25,7 @@
             <button class="btn number" data-number="7">7</button>
             <button class="btn number" data-number="8">8</button>
             <button class="btn number" data-number="9">9</button>
-            <button class="btn operator" data-action="multiply">×</button>
+            <button class="btn operator" data-action="multiply">*</button>
 
             <!-- Row 3 -->
             <button class="btn number" data-number="4">4</button>
@@ -42,7 +42,7 @@
             <!-- Row 5 -->
             <button class="btn number zero" data-number="0">0</button>
             <button class="btn number" data-action="decimal">.</button>
-            <button class="btn operator" data-action="equals">=</button>
+            <button class="btn operator equal" data-action="equals">=</button>
         </div>
     </div>
 
