--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <button class="btn number" data-number="4">4</button>
             <button class="btn number" data-number="5">5</button>
             <button class="btn number" data-number="6">6</button>
-            <button class="btn operator" data-action="subtract">−</button>
+            <button class="btn operator" data-action="subtract">-</button>
 
             <!-- Row 4 -->
             <button class="btn number" data-number="1">1</button>
